deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kubey-api
  namespace: kubey
  labels:
    app: kubey-app
spec:
  template:
    metadata:
      name: kubey-api
      labels:
        app: kubey-app
    spec:
      terminationGracePeriodSeconds: 1000
      containers:
      - name: api-one
        image: pmossman/service_one:v1
        ports:
        - name: api-one-port
          containerPort: 8061
      - name: api-two
        image: pmossman/service_two
        ports:
        - name: api-two-port
          containerPort: 8062
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 3
  replicas: 3
  revisionHistoryLimit: 4
