loadbal.yml
apiVersion: v1
kind: Service
metadata:
  name: loadbal
  namespace: kubey
  labels:
    app: kubey-app
spec:
  type: LoadBalancer
  loadBalancerSourceRanges:
  - 0.0.0.0/0
  ports:
    # the port that this service should serve on
  - port: 80
  selector:
    app: kubey-app
