service_one.yml
apiVersion: v1
kind: Service
metadata:
  name: service-one
  namespace: kubey
  labels:
    app: kubey-app
spec:
  selector:
    app: kubey-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: api-one-port
