ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubey-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /one
        backend:
          serviceName: service-one
          servicePort: 80
      - path: /two
        backend:
          serviceName: service-two
          servicePort: 80
      - path: /loadbal
        backend:
          serviceName: loadbal
          servicePort: 80
